k8s-manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  labels:
    app: frontend-recipe-app
    component: frontend
spec:
  type: NodePort 
  # type: LoadBalancer  
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080 
    protocol: TCP
    name: http
  selector:
    app: frontend-recipe-app
